--- a/BeardedSpice/Preferences/Base.lproj/GeneralPreferencesView.xib
+++ b/BeardedSpice/Preferences/Base.lproj/GeneralPreferencesView.xib
@@ -15,11 +15,11 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="540" height="457"/>
+        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1">
+            <rect key="frame" x="0.0" y="0.0" width="540" height="429"/>
             <subviews>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="721">
-                    <rect key="frame" x="42" y="396" width="454" height="18"/>
+                    <rect key="frame" x="42" y="368" width="454" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="450" id="Rh1-k5-frK"/>
                     </constraints>
@@ -40,7 +40,7 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="B9c-Km-tli">
-                    <rect key="frame" x="42" y="368" width="454" height="18"/>
+                    <rect key="frame" x="42" y="340" width="454" height="18"/>
                     <buttonCell key="cell" type="check" title="Hide menu bar icon" bezelStyle="regularSquare" imagePosition="left" inset="2" id="cL2-zV-PFm">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -78,24 +78,6 @@
                         </binding>
                     </connections>
                 </button>
-                <button horizontalHuggingPriority="750" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="824">
-                    <rect key="frame" x="42" y="312" width="454" height="18"/>
-                    <buttonCell key="cell" type="check" title="Use Apple Remote for control playback" bezelStyle="regularSquare" imagePosition="left" inset="2" id="825">
-                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="toggleUseRemote:" target="-2" id="883"/>
-                        <binding destination="436" name="value" keyPath="values.BeardedSpiceUsingAppleRemote" id="892">
-                            <dictionary key="options">
-                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
-                                <integer key="NSNoSelectionPlaceholder" value="0"/>
-                                <integer key="NSNotApplicablePlaceholder" value="0"/>
-                                <integer key="NSNullPlaceholder" value="0"/>
-                            </dictionary>
-                        </binding>
-                    </connections>
-                </button>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="351">
                     <rect key="frame" x="42" y="228" width="454" height="18"/>
                     <buttonCell key="cell" type="check" title="Show track info on keypress when player is hidden" bezelStyle="regularSquare" imagePosition="left" inset="2" id="352">
@@ -121,7 +103,7 @@
                     </connections>
                 </button>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="baJ-gx-qRa">
-                    <rect key="frame" x="42" y="340" width="454" height="18"/>
+                    <rect key="frame" x="42" y="312" width="454" height="18"/>
                     <buttonCell key="cell" type="check" title="Show track progress instead of album" bezelStyle="regularSquare" imagePosition="left" inset="2" id="IUs-Ty-SYf">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -218,31 +200,28 @@
             </subviews>
             <constraints>
                 <constraint firstItem="721" firstAttribute="top" secondItem="1" secondAttribute="top" constant="44" id="731"/>
-                <constraint firstItem="824" firstAttribute="leading" secondItem="765" secondAttribute="leading" id="834"/>
-                <constraint firstItem="824" firstAttribute="leading" secondItem="721" secondAttribute="leading" id="869"/>
                 <constraint firstItem="765" firstAttribute="leading" secondItem="351" secondAttribute="leading" id="873"/>
                 <constraint firstItem="B9c-Km-tli" firstAttribute="leading" secondItem="721" secondAttribute="leading" id="0BO-aa-yNf"/>
                 <constraint firstAttribute="bottom" secondItem="JrF-Rb-nGy" secondAttribute="bottom" constant="44" id="2YM-Z6-tOl"/>
                 <constraint firstItem="baJ-gx-qRa" firstAttribute="top" secondItem="721" secondAttribute="bottom" constant="40" id="2qq-b5-7jV"/>
                 <constraint firstItem="JrF-Rb-nGy" firstAttribute="top" secondItem="WFb-ud-pGn" secondAttribute="bottom" constant="30" id="3Xv-dg-Rtk"/>
                 <constraint firstItem="D1C-WS-HOj" firstAttribute="leading" secondItem="721" secondAttribute="leading" id="3bJ-tB-9un"/>
-                <constraint firstItem="824" firstAttribute="top" secondItem="baJ-gx-qRa" secondAttribute="bottom" constant="12" id="3kh-XM-pWL"/>
                 <constraint firstItem="Pr1-bF-Zle" firstAttribute="trailing" secondItem="hhj-Ic-mcP" secondAttribute="trailing" id="7EJ-b7-gs8"/>
                 <constraint firstItem="D1C-WS-HOj" firstAttribute="trailing" secondItem="721" secondAttribute="trailing" id="9Ao-uQ-veh"/>
                 <constraint firstItem="WFb-ud-pGn" firstAttribute="trailing" secondItem="hhj-Ic-mcP" secondAttribute="trailing" id="9cV-rQ-ai8"/>
                 <constraint firstItem="Pr1-bF-Zle" firstAttribute="leading" secondItem="hhj-Ic-mcP" secondAttribute="leading" id="9kw-Ti-YTS"/>
                 <constraint firstItem="JrF-Rb-nGy" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="BLZ-JQ-6oo"/>
                 <constraint firstItem="jMA-R1-qrX" firstAttribute="trailing" secondItem="Pr1-bF-Zle" secondAttribute="trailing" id="Bua-Ub-pex"/>
-                <constraint firstItem="824" firstAttribute="trailing" secondItem="721" secondAttribute="trailing" id="Dxt-Mg-jwf"/>
                 <constraint firstItem="hhj-Ic-mcP" firstAttribute="trailing" secondItem="baJ-gx-qRa" secondAttribute="trailing" id="Fc2-Ru-ST6"/>
+                <constraint firstItem="D1C-WS-HOj" firstAttribute="top" secondItem="baJ-gx-qRa" secondAttribute="bottom" constant="12" id="HoN-22-gCe"/>
                 <constraint firstItem="baJ-gx-qRa" firstAttribute="leading" secondItem="351" secondAttribute="leading" id="JhK-r7-GqU"/>
-                <constraint firstItem="D1C-WS-HOj" firstAttribute="top" secondItem="824" secondAttribute="bottom" constant="12" id="MUF-fH-DxK"/>
                 <constraint firstItem="765" firstAttribute="trailing" secondItem="721" secondAttribute="trailing" id="Poh-pP-LAp"/>
                 <constraint firstItem="B9c-Km-tli" firstAttribute="top" secondItem="721" secondAttribute="bottom" constant="12" id="ReS-AP-gHV"/>
                 <constraint firstItem="hhj-Ic-mcP" firstAttribute="top" secondItem="351" secondAttribute="bottom" constant="12" id="TeL-2a-Q7O"/>
                 <constraint firstItem="721" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="44" id="TgI-Xp-wa2"/>
                 <constraint firstItem="351" firstAttribute="trailing" secondItem="721" secondAttribute="trailing" id="Tpc-oj-afU"/>
                 <constraint firstItem="baJ-gx-qRa" firstAttribute="top" secondItem="B9c-Km-tli" secondAttribute="bottom" constant="12" id="UN5-zM-Uva"/>
+                <constraint firstItem="baJ-gx-qRa" firstAttribute="leading" secondItem="721" secondAttribute="leading" id="VkQ-Bf-YPf"/>
                 <constraint firstItem="B9c-Km-tli" firstAttribute="trailing" secondItem="721" secondAttribute="trailing" id="b5T-BJ-c3w"/>
                 <constraint firstItem="jMA-R1-qrX" firstAttribute="top" secondItem="Pr1-bF-Zle" secondAttribute="bottom" constant="34" id="bOj-cd-NCr"/>
                 <constraint firstItem="WFb-ud-pGn" firstAttribute="top" secondItem="jMA-R1-qrX" secondAttribute="bottom" constant="12" id="bhG-eT-MrQ"/>
